--- a/src/app/Layout/seller/seller-feature/seller-feature.component.html
+++ b/src/app/Layout/seller/seller-feature/seller-feature.component.html
@@ -174,7 +174,7 @@
         <p class="mb-4">
           با به قیمت 7 روز هفته 24 ساعته درامد داشته باش
         </p>
-        <p><a routerLink="/home/seller/register" class="btn btn-primary">ثبت نام</a></p>
+        <p><a routerLink="/sellerBe/register" class="btn btn-primary">ثبت نام</a></p>
       </div>
     </div>
   </div>
@@ -191,7 +191,7 @@
         <p class="mb-4">
           با به قیمت، با حداقل هزینه فروشنده شو و پولاتو جمع کن
         </p>
-        <p><a routerLink="/home/seller/register" class="btn btn-primary ">ثبت نام</a></p>
+        <p><a routerLink="/sellerBe/register" class="btn btn-primary ">ثبت نام</a></p>
       </div>
     </div>
   </div>
