--- a/src/app/Layout/seller/seller-header/seller-header.component.html
+++ b/src/app/Layout/seller/seller-header/seller-header.component.html
@@ -3,16 +3,15 @@
     <div class="site-navigation">
       <a routerLink="/" class="logo">begheymat.com</a>
       <ul class="d-none d-lg-inline-block text-left site-menu">
-        <li><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
-        <li><a routerLink="/sellerBe">آموزش پنل فروشندگان</a></li>
-        <li><a routerLink="/sellerBe/login">ورود به پنل فروشندگان</a></li>
+        <li class="cta-button ml-3"><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
+        <li class="cta-button ml-3"><a routerLink="/sellerBe">آموزش پنل فروشندگان</a></li>
+        <li class="cta-button ml-3"><a routerLink="/sellerBe/login">ورود به پنل فروشندگان</a></li>
       </ul>
       <ul class="d-none d-lg-inline-block text-left site-menu float-left">
         <li class="cta-button">
           <a routerLink="/sellerBe/register" target="_blank" class="">ثبت نام</a>
         </li>
       </ul>
-
       <a class="mr-auto float-left d-inline-block d-lg-none" (click)="showMenu()">
         <i class="fa fa-bars fa-2x text-white"></i>
       </a>
