--- a/src/app/Layout/slider/slider.component.html
+++ b/src/app/Layout/slider/slider.component.html
@@ -7,6 +7,9 @@
           <img src="./assets/bootstrap/img/banner/banner.png" alt="first slide" class="slider-image">
         </ng-template>
         <ng-template carouselSlide>
+          <img src="./assets/bootstrap/img/banner/banner1.png" alt="first slide" class="slider-image">
+        </ng-template>
+        <ng-template carouselSlide>
           <img src="./assets/bootstrap/img/banner/banner2.png" alt="first slide" class="slider-image">
         </ng-template>
         <ng-template carouselSlide>
@@ -14,6 +17,9 @@
         </ng-template>
         <ng-template carouselSlide>
           <img src="./assets/bootstrap/img/banner/banner4.png" alt="first slide" class="slider-image">
+        </ng-template>
+        <ng-template carouselSlide>
+          <img src="./assets/bootstrap/img/banner/banner5.png" alt="first slide" class="slider-image">
         </ng-template>
       </owl-carousel-o>
       <!--    <carousel style="border-radius: 20px">-->
