--- a/src/app/SharedComponent/header/nav-header/nav-header.component.css
+++ b/src/app/SharedComponent/header/nav-header/nav-header.component.css
@@ -4,6 +4,7 @@
 .nav-panel {
   height: 54px;
   background: #CC3333;
+  /*background: #EF2B2F;*/
   box-shadow: 0 1px rgba(0,0,0,.04), inset 0 -1px rgba(0,0,0,.04);
   color: #FFFFFF;
 }
