--- a/src/app/Layout/discount/discount.component.html
+++ b/src/app/Layout/discount/discount.component.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid mt-3">
     <div class="best-seller" class="ltr">
       <owl-carousel-o [options]="customOptions">
         <ng-template carouselSlide *ngFor="let i of hottestProduct">
