--- a/src/app/SharedComponent/header/nav-header/nav-header.component.html
+++ b/src/app/SharedComponent/header/nav-header/nav-header.component.html
@@ -362,6 +362,12 @@
                       سایر کالا ها
                     </a>
                   </li>
+                  <li class="departments__item" (mouseover) = "closeOthers()">
+                    <a  routerLink="/home/product"
+                      class="departments__item-link nuxt-link-exact-active nuxt-link-active md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">
+                      همه محصولات
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
