--- a/src/app/Layout/cooperators/cooperators.component.html
+++ b/src/app/Layout/cooperators/cooperators.component.html
@@ -1,76 +1,24 @@
-<!-- <div class="block block-products pt-70">
-  <div class="container-fluid">
-    <div class="block-header"><h3 class="block-header__title">همکاران و فروشندگان
-    </h3>
-      <div class="block-header__divider"></div>
+<div class="container-fluid mt-3" dir="rtl">
+  <div class="row justify-content-center">
+    <div class="col col-12 align-items-center">
+      <div class="section-title text-right">
+        <h2>همکاران و فروشندگان</h2>
+      </div>
     </div>
   </div>
-  <div class="container">
-    <div class="row block-features__list text-center pt-30">
-      <div class="col mt-2">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
+</div>
 
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-      <div class="col mt-1">
-        <div class="features-item">
-          <div class="features-icon d-block mx-auto">
-            <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <div class="container-fluid" dir="rtl">
-    <div class="block-header"><h3 class="block-header__title">همکاران و فروشندگان
-    </h3>
-      <div class="block-header__divider"></div>
-    </div>
-  </div>
-  <div class="container-fluid pt-50">
+<!--  <div class="container-fluid" dir="rtl">-->
+<!--    <div class="block-header"><h3 class="block-header__title">-->
+<!--    </h3>-->
+<!--      <div class="block-header__divider"></div>-->
+<!--    </div>-->
+<!--  </div>-->
+  <div class="container-fluid mt-3">
     <div class="row justify-content-center brand-row py-4">
       <div class="col-12">
         <owl-carousel-o [options]="customOptions">
-  
+
           <ng-template carouselSlide class="brand-item">
             <div class="box">
               <div class="brand-icon d-block mx-auto">
@@ -78,21 +26,7 @@
               </div>
             </div>
           </ng-template>
-  
-          <ng-template carouselSlide class="brand-item">
-            <div class="box">
-              <div class="brand-icon d-block mx-auto">
-                <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-              </div>
-            </div>
-          </ng-template>
-          <ng-template carouselSlide class="brand-item">
-            <div class="box">
-              <div class="brand-icon d-block mx-auto">
-                <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
-              </div>
-            </div>
-          </ng-template>
+
           <ng-template carouselSlide class="brand-item">
             <div class="box">
               <div class="brand-icon d-block mx-auto">
@@ -142,9 +76,22 @@
               </div>
             </div>
           </ng-template>
-  
+          <ng-template carouselSlide class="brand-item">
+            <div class="box">
+              <div class="brand-icon d-block mx-auto">
+                <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
+              </div>
+            </div>
+          </ng-template>
+          <ng-template carouselSlide class="brand-item">
+            <div class="box">
+              <div class="brand-icon d-block mx-auto">
+                <img src="assets/bootstrap/img/cooperator-logo/brand.png" alt="first slide" class="logo">
+              </div>
+            </div>
+          </ng-template>
+
         </owl-carousel-o>
       </div>
     </div>
   </div>
-  
