--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -221,10 +221,30 @@
           </ul>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="selectedFeature">ویژگی</label>
+
+<!--          <p-dropdown *ngIf="features.length"-->
+<!--                      [options]="features"-->
+<!--                      [(ngModel)]="selectedFeature"-->
+<!--                      id="selectedFeature"-->
+<!--                      [filter]="true"-->
+<!--                      optionLabel="titleFarsi"-->
+<!--                      placeholder="&#45;&#45; انتخاب کنید &#45;&#45;"-->
+<!--                      (onChange)="getFeatureValues($event)">-->
+<!--            <ng-template pTemplate="selectedItem">-->
+<!--              <div class="country-item country-item-value" *ngIf="selectedFeature">-->
+<!--                <div>{{selectedFeature.titleFarsi}}</div>-->
+<!--              </div>-->
+<!--            </ng-template>-->
+<!--            <ng-template let-country pTemplate="item">-->
+<!--              <div class="country-item">-->
+<!--                <div>{{country.value.titleFarsi}}</div>-->
+<!--              </div>-->
+<!--            </ng-template>-->
+<!--          </p-dropdown>-->
+
           <p-dropdown [options]="features" appendTo="body" id="selectedFeature"
                       [(ngModel)]="selectedFeature"
                       optionLabel="titleFarsi"
@@ -247,7 +267,7 @@
           </p-listbox>
         </div>
       </div>
-      <p class="pt-3">لیست انتخابی شما</p>
+      <p class="pt-3">لیست ویژگی انتخابی شما</p>
       <p-table [value]="showSelectedFeatures">
         <ng-template pTemplate="header">
           <tr>
@@ -267,6 +287,39 @@
           </tr>
         </ng-template>
       </p-table>
+
+      <div class="p-fluid p-formgrid p-grid pt-3">
+        <div class="p-field p-col">
+          <label for="selectedValues">نوع هدیه</label>
+          <p-listbox [options]="gifts" [(ngModel)]="selectedGifts" id="selectedGifts"
+                     [showToggleAll]="false"
+                     [metaKeySelection]="false" [checkbox]="true" [filter]="true"
+                     [multiple]="true" optionLabel="giftTitle"
+                     (onClick)="addSelectedGifts($event)"
+                     [listStyle]="{'max-height':'250px'}" [style]="{'width':'15rem'}">
+            <ng-template let-gift pTemplate="item">
+              <div class="gift-item">
+                <div>{{gift.value.giftTitle}}</div>
+              </div>
+            </ng-template>
+          </p-listbox>
+        </div>
+        <div class="p-field p-col">
+          <p class="pt-3">لیست نوع هدیه انتخابی شما</p>
+          <p-table [value]="showSelectedGifts">
+            <ng-template pTemplate="body" let-gift>
+              <tr>
+                <td>{{gift.giftTitle}}</td>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="2">هیچ نوع هدیه ای انتخاب نشده است.</td>
+              </tr>
+            </ng-template>
+          </p-table>
+        </div>
+      </div>
 
       <div class="p-fluid p-formgrid p-grid pt-3">
         <div class="p-field p-col">
