--- a/src/app/Layout/products/products.component.html
+++ b/src/app/Layout/products/products.component.html
@@ -128,62 +128,6 @@
         </div>
 
 
-<<<<<<< HEAD
-              <div class="col-sm-12 col-md-6 col-lg-4" dir="ltr" *ngFor="let item of pageOfItems">
-                <div class="block-products-carousel-column" >
-                  <div class="block-products-carousel-cell" (click)="goDetail(Products[item.id]['_id'])">
-                    <div class="product-card product-card-layout-grid" >
-                      <div class="product-card-actions-list" >
-                        <button class="product-card-action product-card-action-quickview" type="button"
-                                aria-label="Quick view">
-                          <svg width="16" height="16">
-                            <path
-                              d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
-                          </svg>
-                        </button>
-                        <button class="product-card-action product-card-action-wishlist" type="button"
-                                aria-label="Add to wish list">
-                          <svg width="16" height="16">
-                            <path
-                              d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
-                          </svg>
-                        </button>
-                        <button class="product-card-action product-card-action-compare" type="button"
-                                aria-label="Add to compare">
-                          <svg width="16" height="16">
-                            <path
-                              d="M9,15H7c-0.6,0-1-0.4-1-1V2c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v12C10,14.6,9.6,15,9,15z"></path>
-                            <path d="M1,9h2c0.6,0,1,0.4,1,1v4c0,0.6-0.4,1-1,1H1c-0.6,0-1-0.4-1-1v-4C0,9.4,0.4,9,1,9z"></path>
-                            <path
-                              d="M15,5h-2c-0.6,0-1,0.4-1,1v8c0,0.6,0.4,1,1,1h2c0.6,0,1-0.4,1-1V6C16,5.4,15.6,5,15,5z"></path>
-                          </svg>
-                        </button>
-                      </div>
-                      <div class="product-card-image">
-                        <div class="image image-type-product">
-                          <a class="image-body">
-                            <img class="image-tag" [src]="Products[item.id]['image']" alt="">
-                          </a>
-                        </div>
-                      </div>
-                      <div class="product-card-info text-right">
-                        <div class="product-card-meta">
-                          <div class="d-flex flex-row">
-                            <span class="product-catagory mr-auto">{{Products[item.id]['Seller'][0].name}}</span>
-                            <span class="product-catagory ">{{Products[item.id]['subCategory']}}</span>
-                          </div>
-                        </div>
-                        <div class="product-card-name">
-                          <div>
-                            <div class="product-card-badges">
-                              <!--                        <div class="tag-badge tag-badge-sale">%15</div>-->
-                              <div class="tag-badge tag-badge-sale"*ngIf="Products[item.id]['offer']===true">%{{Products[item.id]['offerPercent']}}</div>
-                              <div class="tag-badge tag-badge-sale" *ngIf="Products[item.id]['offer']===false">{{Products[item.id]['topText']}}</div>
-                            </div>
-                            <a>{{Products[item.id]['title']}}</a>
-                          </div>
-                        </div>
-=======
         <div class="col-sm-12 col-md-6 col-lg-4" dir="ltr" *ngFor="let item of pageOfItems">
           <div class="block-products-carousel-column">
             <div class="block-products-carousel-cell">
@@ -214,7 +158,7 @@
                     </svg>
                   </button>
                 </div>
-                <div class="product-card-image">
+                <div class="product-card-image" (click)="goDetail(FilteredProducts[item.id]['_id'])">
                   <div class="image image-type-product">
                     <a class="image-body">
                       <img class="image-tag" [src]="FilteredProducts[item.id]['image']" alt="">
@@ -224,7 +168,7 @@
                 <div class="product-card-info text-right">
                   <div class="product-card-meta">
                     <div class="d-flex flex-row">
-                      <span class="product-catagory mr-auto">{{FilteredProducts[item.id]['Seller'][0].name}}</span>
+                      <span class="product-catagory mr-auto">{{FilteredProducts[item.id]['Seller'][0].shopName}}</span>
                       <span class="product-catagory ">{{FilteredProducts[item.id]['subCategory']}}</span>
                     </div>
                   </div>
@@ -236,7 +180,6 @@
                           %{{FilteredProducts[item.id]['offerPercent']}}</div>
                         <div class="tag-badge tag-badge-sale"
                              *ngIf="FilteredProducts[item.id]['offer']===false">{{FilteredProducts[item.id]['topText']}}</div>
->>>>>>> 5abb0ce6fcd114ec786a9ba5c1421ca01444474f
                       </div>
                       <a>{{FilteredProducts[item.id]['title']}}</a>
                     </div>
@@ -436,3 +379,10 @@
 
   </ng-template>
 </p-dialog>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)"
+             size = "large"
+             color = "#fff"
+             type = "ball-fussion"
+             [fullScreen] = "true">
+  <p style="color: white" >منتظر بمانید   ...</p>
+</ngx-spinner>
