--- a/src/app/Layout/products/products.component.html
+++ b/src/app/Layout/products/products.component.html
@@ -127,7 +127,6 @@
           </div>
         </div>
 
-
         <div class="col-sm-12 col-md-6 col-lg-4" dir="ltr" *ngFor="let item of pageOfItems">
           <div class="block-products-carousel-column">
             <div class="block-products-carousel-cell">
@@ -176,7 +175,7 @@
                     <div>
                       <div class="product-card-badges">
                         <!--                        <div class="tag-badge tag-badge-sale">%15</div>-->
-                        <div class="tag-badge tag-badge-sale" *ngIf="FilteredProducts[item.id]['offer']===true">
+                        <div class="tag-badge tag-badge-sale" *ngIf="FilteredProducts[item.id]['offer'] === true">
                           %{{FilteredProducts[item.id]['offerPercent']}}</div>
                         <div class="tag-badge tag-badge-sale"
                              *ngIf="FilteredProducts[item.id]['offer']===false">{{FilteredProducts[item.id]['topText']}}</div>
@@ -219,7 +218,6 @@
             </div>
           </div>
         </div>
-
       </div>
 
       <div class="d-flex justify-content-center">
@@ -257,12 +255,8 @@
         <p-accordion [multiple]="true">
           <p-accordionTab header="دسته بندی" [selected]="true">
             <ul>
-              <li>کالای دیجیتال</li>
-              <li>بهداشت و سلامت</li>
-              <li>مواد غذایی</li>
-              <li>مد و پوشاک</li>
-              <li>لوازم خانگی</li>
-              <li>سایر</li>
+              <li (click)="showAllCategories()">همه دسته بندی ها</li>
+              <li (click)="filterByCategory(item._id)" *ngFor="let item of categories">{{item.title}}</li>
             </ul>
           </p-accordionTab>
           <p-accordionTab header="برند">
@@ -279,38 +273,38 @@
               <ng5-slider [(value)]="valueDynamic" [(highValue)]="highValueDynamic" [options]="options"></ng5-slider>
             </div>
           </p-accordionTab>
-          <p-accordionTab header="رنگ">
+<!--          <p-accordionTab header="رنگ">-->
 
-            <input type="radio" name="color" id="red" value="red"/>
-            <label class="color" for="red"><span style="background-color: #DB2828"></span></label>
+<!--            <input type="radio" name="color" id="red" value="red"/>-->
+<!--            <label class="color" for="red"><span style="background-color: #DB2828"></span></label>-->
 
-            <input type="radio" name="color" id="green"/>
-            <label class="color" for="green"><span style="background-color: #21BA45"></span></label>
+<!--            <input type="radio" name="color" id="green"/>-->
+<!--            <label class="color" for="green"><span style="background-color: #21BA45"></span></label>-->
 
-            <input type="radio" name="color" id="yellow"/>
-            <label class="color" for="yellow"><span style="background-color: #FBBD08"></span></label>
+<!--            <input type="radio" name="color" id="yellow"/>-->
+<!--            <label class="color" for="yellow"><span style="background-color: #FBBD08"></span></label>-->
 
-            <input type="radio" name="color" id="olive"/>
-            <label class="color" for="olive"><span style="background-color: #B5CC18"></span></label>
+<!--            <input type="radio" name="color" id="olive"/>-->
+<!--            <label class="color" for="olive"><span style="background-color: #B5CC18"></span></label>-->
 
-            <input type="radio" name="color" id="orange"/>
-            <label class="color" for="orange"><span style="background-color: #F2711C"></span></label>
+<!--            <input type="radio" name="color" id="orange"/>-->
+<!--            <label class="color" for="orange"><span style="background-color: #F2711C"></span></label>-->
 
-            <input type="radio" name="color" id="teal"/>
-            <label class="color" for="teal"><span style="background-color: #00B5AD"></span></label>
+<!--            <input type="radio" name="color" id="teal"/>-->
+<!--            <label class="color" for="teal"><span style="background-color: #00B5AD"></span></label>-->
 
-            <input type="radio" name="color" id="blue"/>
-            <label class="color" for="blue"><span style="background-color: #2185D0"></span></label>
+<!--            <input type="radio" name="color" id="blue"/>-->
+<!--            <label class="color" for="blue"><span style="background-color: #2185D0"></span></label>-->
 
-            <input type="radio" name="color" id="violet"/>
-            <label class="color" for="violet"><span style="background-color: #6435C9"></span></label>
+<!--            <input type="radio" name="color" id="violet"/>-->
+<!--            <label class="color" for="violet"><span style="background-color: #6435C9"></span></label>-->
 
-            <input type="radio" name="color" id="purple"/>
-            <label class="color" for="purple"><span style="background-color: #A333C8"></span></label>
+<!--            <input type="radio" name="color" id="purple"/>-->
+<!--            <label class="color" for="purple"><span style="background-color: #A333C8"></span></label>-->
 
-            <input type="radio" name="color" id="pink"/>
-            <label class="color" for="pink"><span style="background-color: #E03997"></span></label>
-          </p-accordionTab>
+<!--            <input type="radio" name="color" id="pink"/>-->
+<!--            <label class="color" for="pink"><span style="background-color: #E03997"></span></label>-->
+<!--          </p-accordionTab>-->
           <p-accordionTab header="وضعیت انبار">
             <label>فقط کالاهای موجود</label>
             <p-inputSwitch></p-inputSwitch>
@@ -384,5 +378,5 @@
              color = "#fff"
              type = "ball-fussion"
              [fullScreen] = "true">
-  <p style="color: white" >منتظر بمانید   ...</p>
+  <p style="color: white; direction: rtl" >منتظر بمانید ...</p>
 </ngx-spinner>
