--- a/src/app/Layout/seller/seller-register/seller-register.component.html
+++ b/src/app/Layout/seller/seller-register/seller-register.component.html
@@ -22,7 +22,9 @@
                 <div class="col-12 text-center">
                   <div class="form-group">
                   <span class="p-input-icon-right w-100">
-                  <input pKeyFilter="int" class="form-control" formControlName="mobile" maxlength="11"
+                  <input pKeyFilter="int" class="form-control"
+                         formControlName="mobile"
+                         maxlength="11"
                          minlength="11"
                          name="mobile" pInputText
                          placeholder="شماره موبایل" required>
