--- a/src/app/Layout/seller/seller-header/seller-header.component.html
+++ b/src/app/Layout/seller/seller-header/seller-header.component.html
@@ -33,7 +33,7 @@
         </p>
       </div>
       <div class="col-sm-12 col-lg-6 text-center">
-        <img height="300px" src="assets/bootstrap/img/svg/shop.svg" alt="Image" >
+        <img height="300px" src="assets/bootstrap/img/sellerBe.png" alt="Image" >
       </div>
     </div>
   </div>
